<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
	android:id="@+id/widget0"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">

<ImageView
    android:id="@+id/widget75"
    android:layout_width="152dp"
    android:layout_height="156dp"
    android:layout_x="82dp"
    android:layout_y="33dp"
    android:src="@drawable/logo_lemed" />

<TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="114dp"
    android:layout_y="289dp"
    android:text="@string/Sobre_lbP1" />

<TextView
    android:id="@+id/textView7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="116dp"
    android:layout_y="307dp"
    android:text="@string/Sobre_lbP2" />

<TextView
    android:id="@+id/textView8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="108dp"
    android:layout_y="326dp"
    android:text="@string/Sobre_lbP3" />

<TextView
    android:id="@+id/textView9"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="114dp"
    android:layout_y="346dp"
    android:text="@string/Sobre_lbP4" />

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="40dp"
    android:layout_y="15dp"
    android:text="@string/Sobre_lbAPPNome" />

<TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="59dp"
    android:layout_y="198dp"
    android:text="@string/Sobre_lbFaculdade" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="92dp"
    android:layout_y="224dp"
    android:text="@string/Sobre_lbCadeira" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="105dp"
    android:layout_y="244dp"
    android:text="@string/Sobre_lbProfessor" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="142dp"
    android:layout_y="264dp"
    android:text="@string/Sobre_lbTime" />

<Button
    android:id="@+id/Sobre_btSair"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="120dp"
    android:layout_y="387dp"
    android:text="@string/Sobre_btSair" />

</AbsoluteLayout>