<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
	android:id="@+id/widget0"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">

<TextView
    android:id="@+id/widget40"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="12dp"
    android:layout_y="11dp"
    android:text="@string/Paciente_lbNomePaciente" />

<EditText
    android:id="@+id/Paciente_edNomePaciente"
    android:layout_width="297dp"
    android:layout_height="wrap_content"
    android:layout_x="14dp"
    android:layout_y="36dp"
    android:text="EditText"
    android:textSize="18sp" />

<Button
    android:id="@+id/Paciente_btNovo"
    android:layout_width="70dp"
    android:layout_height="wrap_content"
    android:layout_x="92dp"
    android:layout_y="281dp"
    android:text="@string/Paciente_btNovo"
    android:textSize="14sp" />

<Button
    android:id="@+id/Paciente_btLoc"
    android:layout_width="79dp"
    android:layout_height="wrap_content"
    android:layout_x="11dp"
    android:layout_y="282dp"
    android:text="@string/Paciente_btLocalizar"
    android:textSize="14sp" />

<Button
    android:id="@+id/Paciente_btSalvar"
    android:layout_width="71dp"
    android:layout_height="wrap_content"
    android:layout_x="166dp"
    android:layout_y="280dp"
    android:text="@string/Paciente_btSalvar"
    android:textSize="14sp" />

<Button
    android:id="@+id/Paciente_btExcluir"
    android:layout_width="68dp"
    android:layout_height="wrap_content"
    android:layout_x="243dp"
    android:layout_y="280dp"
    android:text="@string/Paciente_btExcluir"
    android:textSize="14sp" />

<EditText
    android:id="@+id/Paciente_edLocalizar"
    android:layout_width="244dp"
    android:layout_height="wrap_content"
    android:layout_x="12dp"
    android:layout_y="330dp"
    android:text="EditText"
    android:textSize="18sp" />

<Button
    android:id="@+id/Paciente_btOk"
    android:layout_width="48dp"
    android:layout_height="wrap_content"
    android:layout_x="262dp"
    android:layout_y="327dp"
    android:text="@string/Paciente_btOk"
    android:textSize="14sp" />

<Button
    android:id="@+id/Paciente_btSair"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_x="105dp"
    android:layout_y="382dp"
    android:text="@string/Paciente_btSair" />

<TextView
    android:id="@+id/widget41"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="18dp"
    android:layout_y="78dp"
    android:text="@string/Paciente_lbIdade" />

<EditText
    android:id="@+id/Paciente_edIdade"
    android:layout_width="98dp"
    android:layout_height="wrap_content"
    android:layout_x="16dp"
    android:layout_y="100dp"
    android:ems="10"
    android:inputType="number"
    android:maxLength="2"
    android:text="EditText"
    android:textSize="18sp" />

<TextView
    android:id="@+id/widget44"
    android:layout_width="142dp"
    android:layout_height="wrap_content"
    android:layout_x="14dp"
    android:layout_y="139dp"
    android:text="@string/Paciente_lbId" />

<EditText
    android:id="@+id/Paciente_edIdPaciente"
    android:layout_width="105dp"
    android:layout_height="wrap_content"
    android:layout_x="12dp"
    android:layout_y="158dp"
    android:ems="10"
    android:text="EditText"
    android:textSize="18sp" >

    <requestFocus />
</EditText>

</AbsoluteLayout>
